Constructed rotating nav structure

--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -14,6 +14,62 @@
     <title>Rotating Navigation</title>
   </head>
   <body>
+    <div class="container">
+      <div class="circle-container">
+        <div class="circle">
+          <button id="close">
+            <i class="fas fa-times"></i>
+          </button>
+          <button id="open">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="content">
+        <h1>The Next Tomorrow</h1>
+        <small>Florin Pop</small>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae
+          adipisci et quidem vitae, saepe ad illo, incidunt quo inventore natus
+          optio sed, hic deserunt reprehenderit dicta possimus omnis
+          voluptatibus veniam itaque neque repudiandae corporis! Incidunt,
+          provident rerum, sed eveniet quidem minima voluptate omnis error iste
+          sit dolor. Provident odio consectetur iure. Laboriosam, est deleniti
+          voluptas nemo reprehenderit, eum iste voluptate dicta sequi maiores
+          officiis repellendus at, doloremque sit nulla harum aspernatur. Ad
+          molestias minus quibusdam similique corporis. Optio dolorum
+          reprehenderit dicta distinctio tempore! Illum voluptas ut impedit id,
+          similique exercitationem inventore, nemo maiores vel nostrum nihil,
+          illo aspernatur quo alias!
+        </p>
+
+        <h3>Let's Talk Tech</h3>
+        <img
+          src="https://images.unsplash.com/photo-1575140713841-65b3fb205b0d?q=80&w=1738&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+          alt="futuristic women"
+        />
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla autem
+          beatae nihil quidem, odio voluptates debitis id harum soluta accusamus
+          vitae neque! Adipisci suscipit assumenda blanditiis quis nam nemo,
+          nihil cupiditate dolorum aliquid libero debitis accusamus cumque sunt
+          ab sequi non eaque quae provident tempora nisi velit officia maiores
+          commodi! Facere accusantium quo deleniti laudantium porro non!
+          Accusamus tempore cumque eveniet accusantium amet aliquam similique
+          facere, obcaecati debitis a soluta praesentium? Tempora, mollitia!
+          Repellat, deleniti?
+        </p>
+      </div>
+    </div>
+
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i>Home</li>
+        <li><i class="fas fa-user-alt"></i>About</li>
+        <li><i class="fas fa-envelope"></i>Contact</li>
+      </ul>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
