Implemented styling and animations

--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -14,7 +14,8 @@
     <title>Rotating Navigation</title>
   </head>
   <body>
-    <div class="container">
+    <!-- CIRCLE SECTION _____________________________________________________________________________________________________________________ -->
+    <div class="container show-nav">
       <div class="circle-container">
         <div class="circle">
           <button id="close">
@@ -26,6 +27,7 @@
         </div>
       </div>
 
+      <!-- CONTENT SECTION____________________________________________________________________________________________________________________ -->
       <div class="content">
         <h1>The Next Tomorrow</h1>
         <small>Florin Pop</small>
@@ -63,6 +65,7 @@
       </div>
     </div>
 
+    <!-- NAV SECTION ______________________________________________________________________________________________________________________________ -->
     <nav>
       <ul>
         <li><i class="fas fa-home"></i>Home</li>
