--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- CIRCLE SECTION _____________________________________________________________________________________________________________________ -->
-    <div class="container show-nav">
+    <div class="container">
       <div class="circle-container">
         <div class="circle">
           <button id="close">
