Added button and styling

--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -62,6 +62,7 @@
           facere, obcaecati debitis a soluta praesentium? Tempora, mollitia!
           Repellat, deleniti?
         </p>
+        <buttton class="btn-learn">Learn More</buttton>
       </div>
     </div>
 
