--- a/Split Landing Page/index.html
+++ b/Split Landing Page/index.html
@@ -19,7 +19,7 @@
         <h1>Playstation 5</h1>
         <a href="#" class="btn">Buy Now</a>
       </div>
-      <div class="split righ">
+      <div class="split right">
         <h1>XBox Series X</h1>
         <a href="#" class="btn">Buy Now</a>
       </div>
