--- a/FAQ Collapse/index.html
+++ b/FAQ Collapse/index.html
@@ -14,6 +14,56 @@
     <title>FAQ-Collapse</title>
   </head>
   <body>
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+      <div class="faq active">
+        <h3 class="faq-title">Why shouldn't we trust atoms?</h3>
+        <p class="faq-text">They make up everything.</p>
+      </div>
+
+      <button class="i fas fa-chevron-down"></button>
+      <button class="i fas fa-times"></button>
+
+
+    <div class="faq-container">
+      <div class="faq active">
+        <h3 class="faq-title">Why do you call someone with no body and no nose?</h3>
+        <p class="faq-text">Nobody knows.</p>
+      </div>
+
+      <button class="i fas fa-chevron-down"></button>
+      <button class="i fas fa-times"></button>
+
+
+    <div class="faq-container">
+      <div class="faq active">
+        <h3 class="faq-title">What's the object-oriented way to become wealthy?</h3>
+        <p class="faq-text">Inheritance.</p>
+      </div>
+
+      <button class="i fas fa-chevron-down"></button>
+      <button class="i fas fa-times"></button>
+
+
+    <div class="faq-container">
+      <div class="faq active">
+        <h3 class="faq-title">How many tickets does it take to tickle an octopus?</h3>
+        <p class="faq-text">Ten-tickles!</p>
+      </div>
+
+      <button class="i fas fa-chevron-down"></button>
+      <button class="i fas fa-times"></button>
+
+
+    <div class="faq-container">
+      <div class="faq active">
+        <h3 class="faq-title">what is 1 + 1 ??</h3>
+        <p class="faq-text">Depends on who are you asking.</p>
+      </div>
+
+      <button class="i fas fa-chevron-down"></button>
+      <button class="i fas fa-times"></button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
